--- a/client/package.json
+++ b/client/package.json
@@ -37,8 +37,9 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16"
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "postcss-loader": "^7.3.3",
+    "tailwindcss": "^3.3.3"
   }
 }
